syntax = "proto3";

option java_multiple_files=true;
option java_package="grpc.account";

service AccountService {
    rpc createAccount(CreateAccountRequest) returns (CreateAccountResponse);
    rpc existAccountById(AccountIdRequest) returns (ExistAccountResponse);
    rpc getAccountById(AccountIdRequest) returns (AccountResponse);
    rpc getAccountByUsername(AccountUsernameRequest) returns (AccountResponse);
}

message CreateAccountRequest {
    string username = 1;
    string email = 2;
    string password = 3;
}

message CreateAccountResponse {
    string message = 1;
}

message AccountIdRequest {
    int32 id = 1;
}

message AccountUsernameRequest {
    string username = 1;
}

message ExistAccountResponse {
    bool value = 1;
}

message AccountResponse {
    int32 id = 1;
    string username = 2;
    string email = 3;
    string password = 4;
    string role = 5;
    string status = 6;
    string createdTime = 7;
}